--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -114,10 +114,9 @@
 -->
 <body class="overflow-y-hidden bgs"> 
 
-
 <!--section 1-->
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center " style="height:100vh;display: block;" id="orderPlaceDiv">
+<div class="container-fluid justify-content-center align-items-center d-none" style="height:100vh;display: block;" id="orderPlaceDiv">
         <div class="row align-items-center" style="height:100vh;">
         <!-------------------[Reguler menu]---------------------->
             <div class="col-3 p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
@@ -193,13 +192,8 @@
         <!-------------------[PLACING ORDER UI .1]---------------------->
         </div>
 </div>
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-
 <!--section 2-->
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center" style="height:100vh;display:none;" id="summaryDiv">
-
+<div class="container-fluid justify-content-center align-items-center d-none" style="height:100vh;display:none;" id="summaryDiv">
     <div class="row align-items-center " style="height:100vh;">
         <!-------------------[Reguler menu]----------------------------->
         <div class="col-3  p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
@@ -300,9 +294,8 @@
 </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center " style="height:100vh;display: none;" >
+<div class="container-fluid justify-content-center align-items-centerd-none" style="height:100vh;display: none;" >
 
     <div class="row align-items-center " style="height:100vh;">
         <!-------------------[Reguler menu]----------------------------->
@@ -386,6 +379,86 @@
 </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 
+<div class="container-fluid justify-content-center align-items-center " style="height:100vh;" >
+
+    <div class="row align-items-center " style="height:100vh;">
+        <!-------------------[Reguler menu]----------------------------->
+        <div class="col-3  p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
+            <div class="btn-group-vertical justify-content-center align-items-center position-relative mt-xxl-4" role="group" aria-label="Vertical button group" >
+                <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow" ><img src="../assets/Images/home.png" alt="" srcset="" width="40px" ></button>
+                <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/search.png" alt="" srcset="" width="40px" ></button>
+                <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/app.png" alt="" srcset="" width="40px" ></button>
+                <button type="button" class="btn btn-outline-light p-4 my-2 rounded shadow"><img src="../assets/Images/user.png" alt="" srcset="" width="40px" ></button>
+              </div>
+        </div>
+        <!-------------------[Reguler menu]----------------------------->
+
+        <!-------------------[maintain-screen]---------------------->
+        <div class="col justify-content-center align-items-center text-center m-4 mt-5 rounded " style="height:100vh;">
+            <div class="row p-2" style="height:100vh;">
+                <div class="col-9">
+                    <div class="container tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                      <th scope="col">#</th>
+                                      <th scope="col">First</th>
+                                      <th scope="col">Last</th>
+                                      <th scope="col">Handle</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <th scope="row">1</th>
+                                      <td>Mark</td>
+                                      <td>Otto</td>
+                                      <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">2</th>
+                                      <td>Jacob</td>
+                                      <td>Thornton</td>
+                                      <td>@fat</td>
+                                    </tr>
+                                  </tbody>
+                            </table>
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#addNewItem">+</button>
+                            </div>
+
+                        </div>
+                        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">im number 2</div>
+                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">im number 3</div>
+                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">im number 4</div>
+                    </div>
+                </div>
+                <div class="col p-4">
+                    <h2 style="border-bottom:2px solid whitesmoke; padding-bottom: 1vh;">Customize Panel</h2>
+                    <br>
+                    <div class="list-group w-100" id="list-tab" role="tablist">
+                        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Manage customers</a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Daily order Summery</a>
+                        <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Change Packages</a>
+                        <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Manage offers</a>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col ">
+                            <button type="button" class="btn btn-light m-2"><img src="../assets/Images/save_changes.png" alt="" srcset="" width="55vw"></button>
+                            <button type="button" class="btn btn-light m-2"><img src="../assets/Images/reset.png" alt="" srcset="" width="55vw"></button>
+                            <button type="button" class="btn btn-light m-2"><img src="../assets/Images/upload_save.png" alt="" srcset="" width="55vw"></button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-------------------[maintain-screen]---------------------->
+        
+    </div>
+</div>
 
 
 
